register component form

--- a/src/IoTBay/Views/User/Login.cshtml
+++ b/src/IoTBay/Views/User/Login.cshtml
@@ -3,5 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to the user profile</h1>
+    <h2 class="display-4">Login</h2>
+    <p>Haven't signed up yet? <a asp-area="" asp-action="Register">Sign Up</a> here now!</p>
 </div>
