--- a/src/IoTBay/Views/Shared/_Layout.cshtml
+++ b/src/IoTBay/Views/Shared/_Layout.cshtml
@@ -24,9 +24,10 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home"
-                                asp-action="Privacy">Privacy</a>
+                               asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
+                    <a class="btn btn-primary text-light" asp-area="" asp-controller="User" asp-action="Login">Login</a>
                 </div>
             </div>
         </nav>
@@ -38,7 +39,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top text-muted">
         <div class="container">
             &copy; 2022 - IoTBay - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
