--- a/src/IoTBay/Views/Admin/Login.cshtml
+++ b/src/IoTBay/Views/Admin/Login.cshtml
@@ -1,3 +1,28 @@
 ﻿@{
-	ViewData["Title"] = "Login";
+	ViewData["Title"] = "Admin Login";
 }
+
+<div class="container-md">
+	<div class="row justify-content-md-center">
+		<div class="card col-md-4 py-4">
+			<h2 class="text-center">Admin Login</h2>
+			<form class="card-body px-2">
+				<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+				<div class="form-group mb-2">
+					<label class="control-label">Username</label>
+					<input class="form-control" />
+					<span class="text-danger"></span>
+				</div>
+				<div class="form-group mb-2">
+					<label class="control-label">Password</label>
+					<input class="form-control" />
+					<span class="text-danger"></span>
+				</div>
+				<div class="form-group">
+					<input type="submit" class="btn btn-primary" value="Login" />
+				</div>
+			</form>
+		</div>
+	</div>
+</div>
+
