login system initial start

--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -1,12 +1,12 @@
 $ghost-white: #fffaff;
 $jet-black: #333333;
 
-$turqoise: #48e5c2;
-$carrot-orange: #f18f01;
-$maize-crayola: #fac749;
+$orange-soda: #f06449;
+$vivid-sky-blue: #5bc3eb;
+$emerald: #7bd389;
 
 $light: $ghost-white;
 $dark: $jet-black;
 
-$primary: $carrot-orange;
-$secondary: $turqoise;
+$primary: $orange-soda;
+$secondary: $emerald;
