--- a/src/IoTBay/Views/Admin/Login.cshtml
+++ b/src/IoTBay/Views/Admin/Login.cshtml
@@ -1,22 +1,23 @@
-﻿@{
+﻿@model LoginDetails;
+@{
 	ViewData["Title"] = "Admin Login";
 }
 
 <div class="container-md">
-	<div class="row justify-content-md-center">
-		<div class="card col-md-4 py-4">
+	<div class="login-container">
+		<div class="login-card">
 			<h2 class="text-center">Admin Login</h2>
-			<form class="card-body px-2">
+			<form class="login-card-body" asp-action="Login" method="post">
 				<div asp-validation-summary="ModelOnly" class="text-danger"></div>
-				<div class="form-group mb-2">
-					<label class="control-label">Username</label>
-					<input class="form-control" />
-					<span class="text-danger"></span>
+				<div class="form-floating">
+					<input class="form-control" asp-for="Username" placeholder="Exampleusername" />
+					<label asp-for="Username">Username</label>
+					<span class="text-danger" asp-validation-for="Username"></span>
 				</div>
-				<div class="form-group mb-2">
-					<label class="control-label">Password</label>
-					<input class="form-control" />
-					<span class="text-danger"></span>
+				<div class="form-floating">
+					<input class="form-control" asp-for="Password" type="password" placeholder="password" />
+					<label asp-for="Password">Password</label>
+					<span class="text-danger" asp-validation-for="Password"></span>
 				</div>
 				<div class="form-group">
 					<input type="submit" class="btn btn-primary" value="Login" />
