--- a/src/IoTBay/Views/Shared/_Layout.cshtml
+++ b/src/IoTBay/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
         </main>
     </div>
 
-    <footer class="border-top text-muted">
+    <footer class="footer">
         <div class="container">
             &copy; 2022 - IoTBay - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
