--- a/src/IoTBay/Views/Shared/_Layout.cshtml
+++ b/src/IoTBay/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                                asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
+					<partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
