fixed stylesheet issues

--- a/src/scss/variables/_forms.scss
+++ b/src/scss/variables/_forms.scss
@@ -1,6 +1,3 @@
-$form-floating-height: 5.5rem;
-$form-floating-padding-x: 0;
-$form-floating-padding-y: 1.5rem;
-$form-floating-input-padding-t: 2.5rem;
-$form-floating-input-padding-b: 1.5rem;
-$form-floating-label-transform: scale(.65) translateY(-.5rem) translateX(0rem);
+//$form-floating-height: 3.5rem;
+//$form-floating-padding-x: 0;
+//$form-floating-padding-y: 1.5rem;
