--- a/src/IoTBay/Views/Account/Login.cshtml
+++ b/src/IoTBay/Views/Account/Login.cshtml
@@ -3,41 +3,42 @@
 	ViewData["Title"] = "Login";
 }
 
-<div class="row">
-    <div class="col-md-4">
-        <section>
-            <form id="account" method="post" asp-action="Login">
-                <h2>Login</h2>
-                <hr />
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-floating">
-                    <input asp-for="Username" class="form-control" autocomplete="username" aria-required="true" />
-                    <label asp-for="Username" class="form-label">Username</label>
-                    <span asp-validation-for="Username" class="text-danger"></span>
+<div class="login-container">
+    <div class="login-card">
+		<form method="post" asp-action="Login">
+			<h2>Login</h2>
+			<hr />
+			<div class="login-card-body">
+
+			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+			<div class="form-floating mb-3">
+				<input asp-for="Username" class="form-control" autocomplete="username" placeholder="ExampleUsername" aria-required="true" />
+                <label asp-for="Username" class="form-label">Username</label>
+                <span asp-validation-for="Username" class="text-danger"></span>
+            </div>
+            <div class="form-floating mb-3">
+				<input asp-for="Password" class="form-control" type="password" autocomplete="current-password" placeholder="Password1234" aria-required="true" />
+                <label asp-for="Password" class="form-label">Password</label>
+                <span asp-validation-for="Password" class="text-danger"></span>
+             </div>
+             <div>
+				<div class="checkbox">
+					<label asp-for="RememberMe" class="form-label">
+					<input class="form-check-input" asp-for="RememberMe" />
+						@Html.DisplayNameFor(m => m.RememberMe)
+                    </label>
                 </div>
-                <div class="form-floating">
-                    <input asp-for="Password" class="form-control" autocomplete="current-password" aria-required="true" type="password" />
-                    <label asp-for="Password" class="form-label">Password</label>
-                    <span asp-validation-for="Password" class="text-danger"></span>
-                </div>
-                <div>
-                    <div class="checkbox">
-                        <label asp-for="RememberMe" class="form-label">
-                            <input class="form-check-input" asp-for="RememberMe" />
-                            @Html.DisplayNameFor(m => m.RememberMe)
-                        </label>
-                    </div>
-                </div>
-                <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
-                </div>
-                <div>
-                    <p>
-                        <a asp-area="" asp-controller="Account" asp-action="Register">Register as a new user</a>
-                    </p>
-                </div>
-            </form>
-        </section>
+             </div>
+             <div>
+				<button id="login-submit" type="submit" class="btn btn-lg btn-primary text-light">Log in</button>
+             </div>
+             <div>
+				<p>
+					<a asp-area="" asp-controller="Account" asp-action="Register">Register as a new user</a>
+                </p>
+             </div>
+			</div>
+        </form>
     </div>
 </div>
 
