--- a/src/IoTBay/Areas/Admin/Views/Categories/Details.cshtml
+++ b/src/IoTBay/Areas/Admin/Views/Categories/Details.cshtml
@@ -1,13 +1,14 @@
-﻿@model IoTBay.Models.Product
+﻿@model IoTBay.Models.Category
 
 @{
     ViewData["Title"] = "Details";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Details</h1>
 
 <div>
-    <h4>Product</h4>
+    <h4>Category</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -27,24 +28,6 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ImgUrl)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.StockLevel)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.StockLevel)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OnOrder)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.OnOrder)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Price)
         </dd>
     </dl>
 </div>
