--- a/src/IoTBay/Areas/Admin/Views/Categories/Index.cshtml
+++ b/src/IoTBay/Areas/Admin/Views/Categories/Index.cshtml
@@ -1,7 +1,8 @@
-﻿@model IEnumerable<IoTBay.Models.Product>
+﻿@model IEnumerable<IoTBay.Models.Category>
 
 @{
     ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Index</h1>
@@ -21,15 +22,6 @@
             <th>
                 @Html.DisplayNameFor(model => model.ImgUrl)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.StockLevel)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.OnOrder)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Price)
-            </th>
             <th></th>
         </tr>
     </thead>
@@ -44,15 +36,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ImgUrl)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.StockLevel)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OnOrder)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
