--- a/src/IoTBay/Areas/Admin/Views/Products/Create.cshtml
+++ b/src/IoTBay/Areas/Admin/Views/Products/Create.cshtml
@@ -1,11 +1,10 @@
-﻿@model IoTBay.Models.Product
-
+﻿@model CreateProduct
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Add Product";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
+<h1>Add New Product</h1>
 
 <h4>Product</h4>
 <hr />
@@ -22,6 +21,11 @@
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="CategoryId" class="control-label"></label>
+                <select asp-for="CategoryId" class="form-select" asp-items="@(new SelectList(Model.Categories, nameof(Category.Id), nameof(Category.Name)))"></select>
+                <span asp-validation-for="CategoryId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ImgUrl" class="control-label"></label>
