--- a/src/IoTBay/Areas/Admin/Views/Products/Create.cshtml
+++ b/src/IoTBay/Areas/Admin/Views/Products/Create.cshtml
@@ -1,63 +1,73 @@
-﻿@model CreateProduct
+﻿@model IoTBay.Models.CreateProduct
 @{
     ViewData["Title"] = "Add Product";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Add New Product</h1>
+<h2 class="text-center text-dark">Add New Product</h2>
 
-<h4>Product</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CategoryId" class="control-label"></label>
-                <select asp-for="CategoryId" class="form-select" asp-items="@(new SelectList(Model.Categories, nameof(Category.Id), nameof(Category.Name)))"></select>
-                <span asp-validation-for="CategoryId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ImgUrl" class="control-label"></label>
-                <input asp-for="ImgUrl" class="form-control" />
-                <span asp-validation-for="ImgUrl" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="StockLevel" class="control-label"></label>
-                <input asp-for="StockLevel" class="form-control" />
-                <span asp-validation-for="StockLevel" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="OnOrder" class="control-label"></label>
-                <input asp-for="OnOrder" class="form-control" />
-                <span asp-validation-for="OnOrder" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
-                <span asp-validation-for="Price" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
+<div class="container-lg p-4">
+	<h4>Product</h4>
+	
+	<hr />
+	
+	<div class="row">
+		<div class="col-lg">
+			<form asp-action="Create">
+				<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+				
+				<div class="form-group mb-2">
+					<label asp-for="Name" class="control-label"></label>
+					<input asp-for="Name" class="form-control" />
+					<span asp-validation-for="Name" class="text-danger"></span>
+				</div>
+
+				<div class="form-group mb-2">
+					<label asp-for="Description" class="control-label"></label>
+					<textarea asp-for="Description" class="form-control"></textarea>
+					<span asp-validation-for="Description" class="text-danger"></span>
+				</div>
+
+				<div class="form-group mb-2">
+					<label asp-for="CategoryId" class="control-label"></label>
+					<select asp-for="CategoryId" class="form-select" asp-items="Model.SelectCategories"></select>
+					<span asp-validation-for="CategoryId" class="text-danger"></span>
+				</div>
+
+				<div class="form-group mb-2">
+					<label asp-for="ImgUrl" class="control-label"></label>
+					<input asp-for="ImgUrl" class="form-control" />
+					<span asp-validation-for="ImgUrl" class="text-danger"></span>
+				</div>
+
+				<div class="form-group mb-2">
+					<label asp-for="StockLevel" class="control-label"></label>
+					<input asp-for="StockLevel" class="form-control" type="number" />
+					<span asp-validation-for="StockLevel" class="text-danger"></span>
+				</div>
+
+				<div class="form-group mb-2">
+					<label asp-for="OnOrder" class="control-label"></label>
+					<input asp-for="OnOrder" class="form-control" type="number" />
+					<span asp-validation-for="OnOrder" class="text-danger"></span>
+				</div>
+
+				<div class="form-group mb-2">
+					<label asp-for="Price" class="control-label"></label>
+					<input asp-for="Price" class="form-control" type="number" step="0.01" />
+					<span asp-validation-for="Price" class="text-danger"></span>
+				</div>
+
+				<div class="form-group">
+					<input type="submit" value="Create" class="btn btn-primary text-light" />
+				</div>
+			</form>
+		</div>
+	</div>
+	<div>
+		<a asp-action="Index">Back to List</a>
+	</div>
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
