--- a/src/IoTBay/Views/Account/Register.cshtml
+++ b/src/IoTBay/Views/Account/Register.cshtml
@@ -1,4 +1,51 @@
-﻿@{
+@model IoTBay.Models.RegisterViewModel;
+@{
 	ViewData["Title"] = "Register";
 }
 
+<div class="login-container">
+    <div class="login-card">
+		<form method="post" asp-action="Register">
+			<h2>Register</h2>
+			<hr />
+			<div class="login-card-body">
+			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+			
+			<div class="form-floating mb-3">
+				<input asp-for="Username" class="form-control" type="text" placeholder="ExampleUsername" aria-required="true" />
+                <label asp-for="Username" class="form-label">Username</label>
+                <span asp-validation-for="Username" class="text-danger"></span>
+            </div>
+			
+            <div class="form-floating mb-3">
+				<input asp-for="Password" class="form-control" type="password" placeholder="Password1234" aria-required="true" />
+                <label asp-for="Password" class="form-label">Password</label>
+                <span asp-validation-for="Password" class="text-danger"></span>
+             </div>
+			 
+             <div class="form-floating mb-3">
+				<input asp-for="Full_Name" class="form-control" type="text" placeholder="John Doe" aria-required="true" />
+                <label asp-for="Full_Name" class="form-label">Full Name</label>
+                <span asp-validation-for="Full_Name" class="text-danger"></span>
+             </div>
+			 
+			 <div class="form-floating mb-3">
+				<input asp-for="Email" class="form-control" type="email" placeholder="JohnDoe@example.com" aria-required="true" />
+                <label asp-for="Email" class="form-label">Email</label>
+                <span asp-validation-for="Email" class="text-danger"></span>
+             </div>
+			 
+             <div>
+				<button id="register-submit" type="submit" class="btn btn-lg btn-primary text-light">Register</button>
+             </div>
+			 
+             <div>
+				<p>
+					<a asp-area="" asp-controller="Account" asp-action="Login">Login with existing account</a>
+                </p>
+             </div>
+			 
+			</div>
+        </form>
+    </div>
+</div>
