added customer information to database

--- a/src/IoTBay/Views/Account/Register.cshtml
+++ b/src/IoTBay/Views/Account/Register.cshtml
@@ -24,9 +24,9 @@
              </div>
 			 
              <div class="form-floating mb-3">
-				<input asp-for="Full_Name" class="form-control" type="text" placeholder="John Doe" aria-required="true" />
-                <label asp-for="Full_Name" class="form-label">Full Name</label>
-                <span asp-validation-for="Full_Name" class="text-danger"></span>
+				<input asp-for="FullName" class="form-control" type="text" placeholder="John Doe" aria-required="true" />
+                <label asp-for="FullName" class="form-label">Full Name</label>
+                <span asp-validation-for="FullName" class="text-danger"></span>
              </div>
 			 
 			 <div class="form-floating mb-3">
