--- a/src/IoTBay/Views/Shared/_Layout.cshtml
+++ b/src/IoTBay/Views/Shared/_Layout.cshtml
@@ -4,15 +4,16 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - IoTBay</title>
+    <title>@ViewData["Title"] - IoT Bay</title>
     <link rel="stylesheet" href="~/css/style.css" asp-append-version="true" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-light border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">IoTBay</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">IoT Bay</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -22,12 +23,30 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+						<li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">About</a>
+                        </li>
+						<li class="nav-item dropdown">
+                            <a id="shopDropdown" class="nav-link text-dark dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
+							<ul class="dropdown-menu" aria-labelled-by="shopDropdown">
+								<li><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">All Products</a></li>
+								<li><hr class="dropdown-divider" /></li>
+								<li><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Popular Items</a></li>
+								<li><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">New Arrivals</a></li>
+							</ul>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home"
                                asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
 					<partial name="_LoginPartial" />
+					<form class="d-flex mx-2">
+						<button class="btn btn-outline-dark" type="submit">
+						<i class="bi-cart-fill me-1"></i>
+						<span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+					</button>
+					</form>
                 </div>
             </div>
         </nav>
